--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ repositories {
 dependencies {
     compile "com.yammer.dropwizard:dropwizard-core:${dropwizardVersion}"
     compile "commons-lang:commons-lang:2.6"
+    testCompile "org.hamcrest:hamcrest-all:1.3"
     testCompile "junit:junit:4.11"
     testCompile "org.mockito:mockito-all:1.9.5"
     testCompile "com.yammer.dropwizard:dropwizard-testing:${dropwizardVersion}"
